feat(both): url同步处理（父传子）

--- a/packages/main/src/assets/main.css
+++ b/packages/main/src/assets/main.css
@@ -1,4 +1,8 @@
 body {
+    background-color: #f7f8fa;
+    /* overflow: hidden; */
+}
+
+.my-white {
     background-color: #FFFFFF;
-    overflow: hidden;
 }
